--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
-page-home {
-
+.content-container {
+  padding: 50% 10px;
+  text-align: center;
+  .btn-submit {
+    width: 200px;
+    margin: 20px auto;
+  }
 }
